crates/pack-containment/tests/ui/admitted_package_construct.rs
// SPDX-License-Identifier: AGPL-3.0-only

use actingcommand_pack_containment::AdmittedPackage;

fn main() {
    let _package = AdmittedPackage { control: panic!() };
}
